# CPGController

./: .gitattributes  .gitignore  README.md  colab.py  cudnn-10.1-linux-x64-v7.6.5.32.tgz  cudnn-11.0-linux-x64-v8.0.2.39.tgz  cudnn-11.2-linux-x64-v8.1.0.77.tgz  requirements.txt  setup.sh
src/simulations/ws/src/quadruped/: .setup_assistant  CMakeLists.txt  _package.xml  frames.gv  package.xml  package_.xml
src/simulations/ws/src/quadruped/_launch/: default_warehouse_db.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quadruped_moveit_controller_manager.launch.xml  warehouse.launch
src/simulations/ws/src/quadruped/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  quadruped.srdf  quadruped_control.yaml
src/simulations/ws/src/quadruped/launch/: controller.launch  controller.yaml  display.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  planning_context.launch  quadruped_control.launch  quadruped_gazebo.launch  quadruped_moveit_controller_manager.launch.xml  rvis_display.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/simulations/ws/src/quadruped/meshes/: Battery Tray Spacer.stl  Leg Servo Arm.stl  body_spacer.stl  body_spacer_v1_1.stl  body_spacer_v1_3.stl  body_top_plate.stl  bottom_pivot_plate_v1_1.stl  bottom_pivot_plate_v1_2.stl  bottom_pivot_plate_v1_3.stl  leg_bottom_pivot_plate.stl  leg_parallel_linkage_v1_1.stl  leg_parallel_linkage_v1_2.stl  leg_parallel_plate.stl  leg_parallel_plate_v1_2.stl  leg_parallel_plate_v1_3.stl  leg_parallel_plate_v1_4.stl  leg_rev_A.stl  leg_rev_v1_3.stl  leg_rev_v1_4.stl  leg_servo_arm_v1_1.stl  leg_servo_arm_v1_2.stl  leg_servo_arm_v1_3.stl  leg_servo_mount_v1_1.stl  leg_servo_mount_v1_3.stl  leg_servo_retainer.stl  leg_servo_retainer_v1_1.stl  leg_servo_retainer_v1_3.stl  leg_top_pivot_plate_v1_1.stl  leg_top_pivot_plate_v1_4.stl  servo.stl  servo_motor.stl  servo_motor_v1_2.stl  servo_motor_v1_6.stl  servo_motor_v1_7.stl  servo_motor_v1_8.stl  servo_motot.stl
src/simulations/ws/src/quadruped/quadruped/: cardsflow.xml  logfile.txt  model.sdf
src/simulations/ws/src/quadruped/quadruped_control/: CMakeLists.txt  package.xml
src/simulations/ws/src/quadruped/quadruped_control/config/: quadruped_control.yaml
src/simulations/ws/src/quadruped/quadruped_control/launch/: quadruped_control.launch
src/simulations/ws/src/quadruped/quadruped_description/: CMakeLists.txt
src/simulations/ws/src/quadruped/quadruped_description/launch/: controller.launch  controller.yaml  gazebo.launch
src/simulations/ws/src/quadruped/quadruped_description/meshes/: base_link.stl  body_spacer_v1_1.stl  body_spacer_v1_2.stl  body_spacer_v1_3.stl  body_spacer_v1_4.stl  body_top_plate_v1_1.stl  bottom_pivot_plate_v1_1.stl  bottom_pivot_plate_v1_2.stl  bottom_pivot_plate_v1_3.stl  bottom_pivot_plate_v1_4.stl  (+36 more)
src/simulations/ws/src/quadruped/rviz/: moveit.rviz
src/simulations/ws/src/quadruped/scripts/: __init__.py  frames.gv  kinematics.py  quadruped.py  quadruped_torch.py
src/simulations/ws/src/quadruped/urdf/: materials.xacro  note.txt  quadruped.gazebo  quadruped.trans  quadruped.urdf  quadruped.xacro  quadruped_model.xacro
src/simulations/ws/src/quadruped/worlds/: quadruped.world
(+23652 files in other folders)
